feat: add player balance

--- a/blackjack/src/index.css
+++ b/blackjack/src/index.css
@@ -5,3 +5,12 @@ body,
   margin: 0;
   padding: 0;
 }
+
+@keyframes pulce {
+  0%, 100%{
+    transform: scale(1);
+  }
+  50%{
+    transform: scale(1.05);
+  }
+}
