feat: change enter form

--- a/blackjack/src/App.css
+++ b/blackjack/src/App.css
@@ -1,3 +1,12 @@
+:root {
+  --toastify-color-dark: #230036;
+  --toastify-color-progress-dark: #bb86fc;
+  --toastify-color-error: var(--toastify-color-dark);
+  --toastify-color-progress-error: var(--toastify-color-progress-dark);
+  --toastify-icon-color-error: var(--toastify-color-progress-dark);
+
+}
+
 .App {
   text-align: center;
 }
@@ -32,6 +41,7 @@
   from {
     transform: rotate(0deg);
   }
+
   to {
     transform: rotate(360deg);
   }
