--- a/blackjack/src/index.css
+++ b/blackjack/src/index.css
@@ -5,15 +5,15 @@ body,
   margin: 0;
   padding: 0;
 
-  --toastify-color-dark: #0d131e;
+  --toastify-color-dark: #0d131ea6;
   --toastify-color-progress-dark: #03e9f4;
   --toastify-color-error: var(--toastify-color-dark);
-  --toastify-color-progress-error: var(--toastify-color-progress-dark);
-  --toastify-icon-color-error: var(--toastify-color-progress-dark);
+  --toastify-color-progress-error: #c45e51;
+  --toastify-icon-color-error: var(--toastify-color-progress-error);
 
   font-weight: 700;
   font-family: "Prompt";
-  overflow-x: hidden;
+  overflow: hidden;
 
 }
 
@@ -36,4 +36,9 @@ svg:not(:root) {
   50% {
     transform: scale(1.1);
   }
+}
+
+.Toastify__toast-body {
+  font-family: 'Prompt';
+  font-weight: 100;
 }
